# vibview

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  test.yml
docs/: api.md  design.md  index.md  task_spec.md
docs/proposals/: band-structure-viewer.md  camera-hud-and-controls.md  castep-parser.md  editable-labels.md  gaussian-parser.md  phonon-example-system.md  vasp-parser.md
src/vibview/: __init__.py  config.py  core.py  main.py  models.py  storage.py
src/vibview/data/: defaults.yaml
src/vibview/examples/: diamond.h5  h2o.h5  water.h5
src/vibview/parsers/: __init__.py  native.py  orca.py  phonopy.py
src/vibview/renderers/: __init__.py  _geometry.py  animation_controller.py  atom_manager.py  bond_manager.py  camera_controller.py  export.py  lattice_manager.py  mode_overlay_manager.py  qt_window.py  scene_builder.py  vispy_renderer.py
tests/: benchmark_supercell.py  conftest.py  test_camera_controller.py  test_config.py  test_core.py  test_elements.py  test_example_integration.py  test_export.py  test_format_registry.py  test_main.py  test_mode_panel.py  test_models.py  test_orca_parser.py  test_parsers.py  test_phonopy_parser.py  test_qt_window.py  test_renderer_modes.py  test_renderer_visuals.py  test_storage.py
